--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <!-- Orange Palette -->
+    <color name="purple_200">#FFCC80</color> <!-- Light Orange -->
+    <color name="purple_500">#FF9800</color> <!-- Primary Orange -->
+    <color name="purple_700">#F57C00</color> <!-- Dark Orange -->
+    <color name="teal_200">#FFE0B2</color> <!-- Lighter Orange Accent -->
+    <color name="teal_700">#FF9800</color> <!-- Primary Orange -->
+
+    <!-- Standard Colors -->
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Transparent Colors for Splash -->
+    <color name="white_transparent_80">#CCFFFFFF</color>
+    <color name="orange_transparent_80">#CCFF9800</color>
+
+    <!-- Specific state colors -->
+    <color name="design_default_color_primary">@color/purple_500</color>
+    <color name="design_default_color_error">#B00020</color>
 </resources>
