--- a/app/src/main/res/drawable/ic_wifi_on.xml
+++ b/app/src/main/res/drawable/ic_wifi_on.xml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportHeight="24"
+    android:tint="?attr/colorOnSurface">
     <path
-        android:fillColor="#000000"
-        android:pathData="M1,9l2,2c4.97,-4.97 13.03,-4.97 18,0l2,-2C18.93,4.93 9.07,4.93 1,9zM5,13l2,2c2.76,-2.76 7.24,-2.76 10,0l2,-2C16.14,10.14 11.86,10.14 5,13zM9,17l2,2c0.55,-0.55 1.45,-0.55 2,0l2,-2C13.39,15.39 10.61,15.39 9,17z"/>
+        android:fillColor="@android:color/white"
+        android:pathData="M1,9l2,2c4.97,-4.97 13.03,-4.97 18,0l2,-2C16.93,2.93 7.07,2.93 1,9zM9,17l3,3 3,-3c-1.65,-1.66 -4.34,-1.66 -6,0zM5,13l2,2c2.76,-2.76 7.24,-2.76 10,0l2,-2C15.14,9.14 8.87,9.14 5,13z"/>
 </vector>
